--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,121 @@
-/*# sourceMappingURL=App.css.map */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+ul,
+ol {
+  padding: 0;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+ul,
+ol[class] {
+  list-style: none;
+}
+
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+article > * + * {
+  margin-top: 1em;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+.hidden {
+  display: none !important;
+}
+
+span,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li,
+div {
+  color: #fff;
+}
+
+header.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 17.8vw;
+  align-items: center;
+}
+header.header .logo {
+  width: 80px;
+  height: 80px;
+  filter: drop-shadow(0 0 24px white);
+}
+header.header .nav-list {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+header.header .nav-list ul {
+  display: flex;
+  gap: 40px;
+  list-style: none;
+}
+header.header .login-and-menu {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+header.header .login-and-menu .login-btn {
+  max-width: 140px;
+  height: 52px;
+  padding: 14px 46px;
+  background-color: unset;
+  border: 1px solid #fff;
+}
+
+body {
+  background-color: #181818;
+}/*# sourceMappingURL=App.css.map */
