--- a/src/sections/_Header.scss
+++ b/src/sections/_Header.scss
@@ -1,22 +1,20 @@
 header.header {
   display: flex;
   justify-content: space-between;
-  margin: 30px 17.8vw;
   align-items: center;
   position: sticky;
-  top: 30px;
   z-index: 4;
+  padding: 15px 17.8vw;
+  top:0;
+  background-color: $dark-background;
   @include for-size(mobile) {
-    margin: 15px 16px;
-    top: 15px;
+    padding: 7px 16px;
   }
   @include for-size(tablet) {
-    margin: 20px 14vw;
-    top: 20px;
+    padding: 10px 14vw;
   }
   @include for-size(laptop) {
-    margin: 30px 17.8vw;
-    top: 30px;
+    padding: 15px 17.8vw;
   }
   .logo {
     width: 80px;
