--- a/src/sections/_Header.scss
+++ b/src/sections/_Header.scss
@@ -5,13 +5,13 @@ header.header {
   position: sticky;
   z-index: 4;
   padding: 15px 17.8vw;
-  top:0;
+  top: 0;
   background-color: $dark-background;
   @include for-size(mobile) {
     padding: 7px 16px;
   }
   @include for-size(tablet) {
-    padding: 10px 14vw;
+    padding: 10px 10vw;
   }
   @include for-size(laptop) {
     padding: 15px 17.8vw;
@@ -19,6 +19,7 @@ header.header {
   .logo {
     width: 80px;
     height: 80px;
+    min-width: 80px;
     filter: drop-shadow(0 0 24px white);
     user-select: none;
   }
@@ -32,7 +33,11 @@ header.header {
       list-style: none;
       a {
         text-decoration: none;
+        padding: 5px;
       }
+    }
+    @include for-size(tablet) {
+      display: none;
     }
     @include for-size(mobile) {
       display: none;
@@ -45,10 +50,7 @@ header.header {
     align-items: center;
     gap: 17px;
     .login-btn {
-      @include button-style(
-        $bg-color: $dark-background,
-        $padding: 14px 46px
-      );
+      @include for-button($bg-color: $dark-background, $padding: 14px 46px);
     }
     .menu-btn {
       background-color: unset;
@@ -60,8 +62,64 @@ header.header {
       img {
         width: 44px;
       }
+      @include for-size(tablet) {
+        display: block;
+      }
       @include for-size(mobile) {
         display: block;
+      }
+    }
+  }
+  .burger-menu {
+    position: fixed;
+    bottom: 0; /* Розташування меню внизу */
+    left: 0;
+    width: 0;
+    height: 0;
+    transition: height ease-out 0.25s;
+    overflow: hidden;
+    background-color: $dark-background;
+    display: flex;
+    width: 100%;
+
+    &.open {
+      height: 100vh;
+    }
+    .content {
+      padding: 15px;
+      margin-top: 60px;
+      width: 100%;
+      height: 100%;
+      .cross-btn {
+        position: absolute;
+        top: 35px;
+        right: 35px;
+        background-color: unset;
+        outline: none;
+        border: none;
+        padding: 10px;
+        transform: scale(1.8);
+
+        .cross-icon {
+          color: $light-background;
+
+        }
+
+      }
+      nav{
+        text-align: center;
+        ul{
+          display: flex;
+          flex-direction: column;
+          gap:20px;
+          a{
+            @include for-text(mobile-menu);
+            text-decoration:none;
+            li:active{
+              color: darken($light-text, 15%);
+            }
+          }
+        }
       }
     }
   }
