--- a/src/sections/_Contents.scss
+++ b/src/sections/_Contents.scss
@@ -29,7 +29,8 @@
       flex-direction: column;
       align-items: center;
       width: 476px;
-
+      padding-left: 25px;
+      padding-right: 25px;
       .heading {
         text-align: center;
         max-width: 288px;
@@ -54,8 +55,8 @@
     @include for-size(mobile) {
       padding-right: 20px;
       padding-left: 20px;
-      margin-left: 80px;
-      margin-right: 80px;
+      margin-left: 35px;
+      margin-right: 35px;
       .card {
         width: 100%;
         
