Feature: Partners Section

--- a/src/sections/_Features.scss
+++ b/src/sections/_Features.scss
@@ -1,7 +1,8 @@
 .features {
-  padding: 62px 0;
+  padding: 2px 0;
   margin-bottom: 100px;
   & > .heading {
+    padding: 0 15px;
     text-align: center;
     display: flex;
     flex-direction: column;
