--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,7 @@
 @import "../sections/Features";
 @import "../sections/Gallery";
 @import "../sections/Contents";
-
+@import "../sections/Partners";
 body{
     background-color: $dark-background;
 }
