--- a/src/sections/_Contents.scss
+++ b/src/sections/_Contents.scss
@@ -1,6 +1,7 @@
 .contents {
-  padding: 62px 0;
+  padding: 50px 0;
   & > .heading {
+    padding: 0 15px;
     text-align: center;
     display: flex;
     flex-direction: column;
