--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,10 @@
 @import "../sections/Gallery";
 @import "../sections/Contents";
 @import "../sections/Partners";
+@import "../sections/Testimonials";
+@import "../sections/Footer";
+@import "../pages/Minesweeper";
+
 body{
     background-color: $dark-background;
 }
